--- a/compose.yaml
+++ b/compose.yaml
@@ -10,7 +10,7 @@ services:
     depends_on:
       - mongo
     environment:
-      - MONGO_URI=mongodb://mongo:27017/mydatabase
+      - MONGO_URI=mongodb://mongo:27017/productdatabse
 
   mongo:
     build:
