--- a/Dockerfiles/Dockerfile.mongo
+++ b/Dockerfiles/Dockerfile.mongo
@@ -1,2 +1,12 @@
 FROM mongo
+
+# Install MongoDB tools and wget
+RUN apt-get update && \
+    apt-get install -y gnupg wget && \
+    wget -qO - https://www.mongodb.org/static/pgp/server-5.0.asc | apt-key add - && \
+    echo "deb http://repo.mongodb.org/apt/ubuntu focal/mongodb-org/5.0 multiverse" | tee /etc/apt/sources.list.d/mongodb-org-5.0.list && \
+    apt-get update && \
+    apt-get install -y mongodb-org-tools
+
+# Expose MongoDB default port
 EXPOSE 27017
