--- a/compose.yaml
+++ b/compose.yaml
@@ -9,8 +9,12 @@ services:
       - 8082:8082
     depends_on:
       - mongo
+      - minio
     environment:
-      - MONGO_URI=mongodb://kashyap:password@mongo:27017/bookstore  # Updated URI
+      - MONGO_URI=mongodb://kashyap:password@mongo:27017/bookstore
+      - MINIO_URL=http://minio:9000
+      - MINIO_ACCESS_KEY=kashyap
+      - MINIO_SECRET_KEY=password
 
   mongo:
     build:
@@ -34,7 +38,22 @@ services:
       - ME_CONFIG_MONGODB_SERVER=mongo
     ports:
       - 8081:8081
-      
+
+  minio:
+    build:
+      context: .
+      dockerfile: Dockerfiles/Dockerfile.minio
+    ports:
+      - 9000:9000
+      - 9001:9001
+    environment:
+      - MINIO_ROOT_USER=kashyap
+      - MINIO_ROOT_PASSWORD=password
+    volumes:
+      - minio-data:/data
+
 volumes:
   product-data:
+    driver: local
+  minio-data:
     driver: local
